--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -10,7 +10,7 @@
                 </div>
 			
                 <div id="fr" class="countdown">
-                    <img src="/assets/omega_countdown/line.png">
+                    <img src="/assets/omega_countdown/line.png" style="border: 1px solid #9f9f9f;">
           	    <div class="countdown_numbers">
              		<div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">00</span></div>
             		<div class="hours cd_item"><span class="hours_label cd_label"></span><span class="hours_remaining cd_remain">00</span></div>
@@ -27,8 +27,7 @@
             	    <div class="inter">:</div>
             	    <div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">00</span></div>
           	</div>
-
-	  	<div id="border" class="border"></div>	
+	
             </div>
             <a class="omega_link" target="_blank" href="https://www.omegawatches.com"></a>
       	</div>
