--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -81,7 +81,7 @@
       	</div>
       	    
 	<div class="navbar-collapse collapse col-md-12" id="main-navbar">
-            <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
+            <div class="nav navbar-nav justify-content-center">
             	{% for link in nav %}
 
               	    {% capture current_base_page %}{{ site.baseurl }}{{ page.url | split:'.html' | first }}{% endcapture %}
