--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -16,6 +16,7 @@
 <script src="{{site.url}}/js/vendors/jquery-3.2.0.min.js"></script>
 <script src="{{site.url}}/js/vendors/polyfill/modernizr.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.timeago.min.js"></script>
+<script src="{{site.url}}/js/vendors/poppers.min.js"></script>
 <script src="{{site.url}}/js/vendors/bootstrap.min.js"></script>
 <script src="{{site.url}}/js/vendors/featherlight.min.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
