--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -57,18 +57,18 @@
             </div>
       	</div>
       	
-	<div class="socials slidedown desktop col-md-3 col-md-offset-1">
-	    <div class="links_social">
-	    	<a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	<div class="socials slidedown desktop col-md-3 col-md-offset-1" style="margin-top: 0; height: 100px;">
+	    <div class="links_social" style="padding-top: 15px; padding-bottom: 10px;">
+	    	<a class="socials_links instagram" style="padding: 10px;" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
 	      	    <img height="30" src="/images/layout/Instagram-logo.png">
 	    	</a>
-	    	<a class="socials_links facebook" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	    	<a class="socials_links facebook" style="padding: 10px;" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
 	      	    <img height="30" src="/images/layout/facebook-icon.png">
 	    	</a>
-	    	<a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	    	<a class="socials_links twitter" style="padding: 10px;" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
 	      	    <img height="24" src="/images/layout/twitter-icon.svg">
 	    	</a>
-	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	    	<a class="socials_links youtube" style="padding: 10px;" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
 	      	    <img height="24" src="/images/layout/YouTube-icon.png">
 	    	</a>
 	    </div>  
