--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -1,6 +1,6 @@
 {% assign nav = site.data[site.lang].nav.header %}
 
-<nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
+<nav id="mainNav" class="navbar navbar-custom navbar-fixed-top" style="padding-bottom: 10px;">
     <div class="container" style="padding-right: 0;">
         <div class="col-md-3" id="countdown">
             <div id="countdown_container_tag" class="countdown_container">
