--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -3,93 +3,78 @@
 
 <div class="container carousel_container">
     <div class="row">
-        <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="5000">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                
-                {% if site.lang == "fr-fr" %} 
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="/images/home/Culture_FR_1880x350.png" alt="First slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/Heritage_FR_1880x350.png" alt="Second slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/SeeYou_FR_1880x350.png" alt="Third slide">
-                    </div>
-                </div>
-                {% endif %}
-                
-                {% if site.lang == "de-de" %} 
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="/images/home/Culture_DE_1880x350.png" alt="First slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/Heritage_DE_1880x350.png" alt="Second slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/SeeYou_DE_1880x350.png" alt="Third slide">
-                    </div>
-                </div>
-                {% endif %}
-                
-                {% if site.lang == "en-gb" %} 
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="/images/home/Culture_EN_1880x350.png" alt="First slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/Heritage_EN_1880x350.png" alt="Second slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/SeeYou_EN_1880x350.png" alt="Third slide">
-                    </div>
-                </div>
-                {% endif %}
-                
-                {% if site.lang == "it-it" %} 
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="/images/home/Culture_IT_1880x350.png" alt="First slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/Heritage_IT_1880x350.png" alt="Second slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/SeeYou_IT_1880x350.png" alt="Third slide">
-                    </div>
-                </div>
-                {% endif %}
-                
-                {% if site.lang == "es-es" %} 
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="/images/home/Culture_ES_1880x350.png" alt="First slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/Heritage_ES_1880x350.png" alt="Second slide">
-                    </div>
-                    <div class="item">
-                        <img src="/images/home/SeeYou_ES_1880x350.png" alt="Third slide">
-                    </div>
-                </div>
-                {% endif %}
-                
-                <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
+        <!-- Carousel -->
+    	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+			  	<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner">
+			    <div class="item active">
+			    	<img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="First slide">
+                    <!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                            	<span>Welcome to <strong>LOREM IPSUM</strong></span>
+                            </h2>
+                            <br>
+                            <h3>
+                            	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                        </div>
+                    </div><!-- /header-text -->
+			    </div>
+			    <div class="item">
+			    	<img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Second slide">
+			    	<!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span>Welcome to LOREM IPSUM</span>
+                            </h2>
+                            <br>
+                            <h3>
+                            	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                        </div>
+                    </div><!-- /header-text -->
+			    </div>
+			    <div class="item">
+			    	<img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Third slide">
+			    	<!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span>Welcome to LOREM IPSUM</span>
+                            </h2>
+                            <br>
+                            <h3>
+                            	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                        </div>
+                    </div><!-- /header-text -->
+			    </div>
+			</div>
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+		    	<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+		    	<span class="glyphicon glyphicon-chevron-right"></span>
+			</a>
+		</div><!-- /carousel -->
     </div>
 </div>
