--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,9 @@
 
   <link rel="stylesheet" href="{{ "/css/vendors/normalize.min.css" | prepend: site.baseurl_root }}">
   <link rel="stylesheet" href="{{ "/css/vendors/bootstrap.min.css" | prepend: site.baseurl_root }}">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <link rel="stylesheet" href="{{ "/css/style-top.css" | prepend: site.baseurl_root }}">
   <script rel="preload" src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
   <script rel="preload" type="text/javascript">
