--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -5,67 +5,76 @@
     <div class="row">
         <!-- Carousel -->
     	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	    <!-- Indicators -->
-	    <ol class="carousel-indicators">
-		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-	    	<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-	    	<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	    </ol>
-	    <!-- Wrapper for slides -->
-	    <div class="carousel-inner">
-	    	<div class="item active">
-		    <img src="/images/home/vortex1.jpg" alt="First slide">
-		    <!-- Static Header -->
-		    <div class="header-text hidden-xs">
-			<div class="col-md-12 text-center">
-			    <h2>
-				<span>Premier article</span>
-			    </h2>
-			    <br>
-			    <h3>
-				<span>Premier petit texte.</span>
-			    </h3>
-			    <br>
-			</div>
-		    </div>
-		    <div class="item">
-			<img src="/images/home/vortex2.jpg" alt="Second slide">
-			<!-- Static Header -->
-			<div class="header-text hidden-xs">
-			    <div class="col-md-12 text-center">
-			    	<h2>
-				    <span>Deuxième article</span>
-			    	</h2>
-			    	<br>
-			    	<h3>
-				    <span>Deuxième petit texte.</span>
-			    	</h3>
-			    	<br>
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+			  	<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner">
+			    <div class="item active">
+			    	<img src="/images/home/vortex1.jpg" alt="First slide">
+                    <!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                            	<span>Welcome to <strong>LOREM IPSUM</strong></span>
+                            </h2>
+                            <br>
+                            <h3>
+                            	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                        </div>
+                    </div><!-- /header-text -->
 			    </div>
-		    	</div>
-		    	<div class="item">
-			    <img src="/images/home/vortex3.jpg" alt="Third slide">
-			    <!-- Static Header -->
-			    <div class="header-text hidden-xs">
-			    	<div class="col-md-12 text-center">
-			    	<h2>
-				    <span>Troisième article</span>
-			    	</h2>
-			    	<br>
-			    	<h3>
-				    <span>Troisième petit texte.</span>
-			    	</h3>
-			    	<br>
-		    	    </div>
+			    <div class="item">
+			    	<img src="/images/home/vortex2.jpg" alt="Second slide">
+			    	<!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span>Welcome to LOREM IPSUM</span>
+                            </h2>
+                            <br>
+                            <h3>
+                            	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                        </div>
+                    </div><!-- /header-text -->
+			    </div>
+			    <div class="item">
+			    	<img src="/images/home/vortex3.jpg" alt="Third slide">
+			    	<!-- Static Header -->
+                    <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span>Welcome to LOREM IPSUM</span>
+                            </h2>
+                            <br>
+                            <h3>
+                            	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                        </div>
+                    </div><!-- /header-text -->
+			    </div>
 			</div>
-		    </div>
-		    <!-- Controls -->
-		    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
 		    	<span class="glyphicon glyphicon-chevron-left"></span>
-		    </a>
-		    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
 		    	<span class="glyphicon glyphicon-chevron-right"></span>
-		    </a>
+			</a>
 		</div><!-- /carousel -->
-    	    </div>
-	</div>
+    </div>
+</div>
