--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -19,7 +19,7 @@
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
                             <h2>
-                            	<span><Premier article</span>
+                            	<span>Premier article</span>
                             </h2>
                             <br>
                             <h3>
