--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -4,7 +4,7 @@
 
 /* Carousel Styles */
 .carousel-indicators .active {
-    background-color: ##d4016f;
+    background-color: #d4016f;
 }
 
 .text-center h3 {
