--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -7,10 +7,6 @@
     background-color: #d4016f;
 }
 
-.text-center h3 {
-    margin-top: 100px;
-}
-
 .carousel-inner img {
     width: 100%;
     max-height: 460px
@@ -84,11 +80,13 @@
 
 .header-text h2 span {
     background-color: #0180c0;
+    color: #fff;
     padding: 10px;
 }
 
 .header-text h3 span {
     background-color: #d4016f;
+    color: #fff;
     padding: 15px;
     margin-top: 100px;
 }
