--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -84,11 +84,14 @@
     padding: 10px;
 }
 
+.header-text h3 {    
+    margin-top: 100px;
+}
+
 .header-text h3 span {
     background-color: #d4016f;
     color: #fff;
     padding: 15px;
-    margin-top: 100px;
 }
 
 .btn-min-block {
