--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -165,8 +165,8 @@
     }
 }
 
-.newsletter-cta-btn.btn {
-    background-color: #0180c0;
+.newsletter-cta-btn {
+    background-color: #0180c0 !important;
 }
 
 .newsletter_cta_form {
