--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -188,6 +188,17 @@
     }
 }
 
+.socials-icon-cta {
+    margin-top: 20px;
+    margin-bottom: 40px;	
+}
+
+.previous_yog_text, .incoming_games_text {
+    margin-top: 40px;
+    color: #000;
+}
+
+
 .cio-sponsors {
     padding-top: 80px;
     padding-bottom: 80px;
