--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
 <div class="footer">
   <div class="container">
-    <div class="row flex vcenter">
+    <div class="row flex">
       <div class="footer_logo col-md-8">
         {% for link in nav %}
           <a href="{{link.path}}">{{link.title}}</a>
