--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,20 @@
         {% endfor %}
       </div>
       <div class="footer_copy col-md-4">
-        {{site.prismicData.single.base.fragments.footer_content.html}}
+        <p>
+          copyrights © 2018 | Lausanne2020
+        </p>
+
+        <p>
+          Lausanne 2020
+          Comité d'organisation 
+          Maison du Sport International
+          Av. de Rhodanie 54, 1007, Lausanne
+        </p>
+        
+        <p>
+          <a href="https://www.lausanne2020.com/images/home/PrivacyPolicy_FR.pdf" target="_blank" rel="noopener">Politique de confidentialité et conditions d'utilisation</a>
+        </p>
       </div>
     </div>
   </div>
