--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,9 @@
         </p>
 
         <p>
-          Lausanne 2020
-          Comité d'organisation 
-          Maison du Sport International
+          Lausanne 2020<br>
+          Comité d'organisation<br>
+          Maison du Sport International<br>
           Av. de Rhodanie 54, 1007, Lausanne
         </p>
         
