--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -15,10 +15,10 @@
 }
 
 .footer_copy p {
-    text-align: center;
     font-size: 14px;
     line-height: 20px;
     hyphens: none;
+    text-align: left;
 }
 
 .footer_nav {
