--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
     position: relative;
     color: #fff;
-    padding: 50px 0;
+    padding-top: 50px;
+    padding-bottom: 25px;
     background-color: $dark-blue;
     a {
         color: #fff;
@@ -19,6 +20,8 @@
     line-height: 20px;
     hyphens: none;
     text-align: left;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
 .footer_nav {
